# tanuki

./: CMakeLists.txt  Doxyfile  README.adoc  TanukiConfig.cmake.in
src/main/cpp/: tanuki.h.in
src/main/cpp/tanuki/algorithm/: CMakeLists.txt  algorithm.h  algorithm.hxx
src/main/cpp/tanuki/avro_specific/: CMakeLists.txt  armadillo.h  array.h  map.h  pair.h  real_schema.h.in  set.h  size_t.cc  size_t.h
src/main/cpp/tanuki/common/: CMakeLists.txt
src/main/cpp/tanuki/common/divider/: group_delimiter.cc  group_delimiter.h  group_delimiter.hxx
src/main/cpp/tanuki/eda/: CMakeLists.txt  hamiltonian_energies.cc  hamiltonian_energies.h
src/main/cpp/tanuki/enumeration/: CMakeLists.txt  name.h
src/main/cpp/tanuki/interop/: CMakeLists.txt  c_complex_number.h  c_multi_array.cc  c_multi_array.h  c_multi_array.hxx  c_opaque_container.h  c_poly_pointer.h  c_sequence.h  c_sequence.hxx  foreign_container.h  foreign_container.hxx  foreign_container_ref.h  foreign_container_ref.hxx  foreign_forward_iterator.h  foreign_forward_iterator.hxx  foreign_forwarder.h  foreign_forwarder.hxx  foreign_iterator.h  foreign_iterator.hxx  foreign_multi_array.h  foreign_multi_array_ref.h  foreign_pointer.cc  foreign_pointer.h  foreign_sequence.h  foreign_sequence.hxx  receiver.cc  receiver.h  spin_map.cc  spin_map.h  spin_map.hxx
src/main/cpp/tanuki/math/: CMakeLists.txt  comparison.cc  comparison.h  comparison.hxx
src/main/cpp/tanuki/math/combinatorics/: combinations.cc  combinations.h  combinations.hxx  round_robin_tourney.h  round_robin_tourney.hxx
src/main/cpp/tanuki/math/linear/: cholesky_decomposition.h  cholesky_decomposition.hxx  eigen.h  equation_system.h  indexed_vector_pair.h  iterated_gram_schmidt.h  iterated_gram_schmidt.hxx  matrix_index_pair.h  matrix_product.h  matrix_product.hxx  number_array.cc.in  number_array.h  number_array.hxx  number_array_specific.cc  number_array_specific.h  number_array_specific.hxx  operator_representation.h  operator_representation.hxx  qr_decomposition.h  rotation_matrix_spec.cc  rotation_matrix_spec.h  rotation_matrix_spec.hxx  triangular_matrix.h  triangular_matrix.hxx  weighted_orthogonalization.h  weighted_orthogonalization.hxx
src/main/cpp/tanuki/memory/: CMakeLists.txt  smart_ptr.h  storage_order.h
src/main/cpp/tanuki/number/: CMakeLists.txt  number_cast.cc  number_cast.h  types.h.in
src/main/cpp/tanuki/parallel/: CMakeLists.txt  concurrent_actuator.h
src/main/cpp/tanuki/parallel/grs/: actuator.cc  actuator.h  actuator.hxx  jacobi_sidedness.h
src/main/cpp/tanuki/parallel/memory/: copy.cc  copy.h
src/main/cpp/tanuki/parallel/mpi/: mpi_basic_datatype.cc  mpi_basic_datatype.h  mpi_host_based_comms.cc  mpi_host_based_comms.h  mpi_hosts.cc  mpi_hosts.h  mpi_shared_memory.cc  mpi_shared_memory.h
src/main/cpp/tanuki/scf_mi/: CMakeLists.txt  lmo_projection_factors.h  lp_projection_factors.h  projection_factors.h  scf_mi_method.cc.in  scf_mi_method.h
src/main/cpp/tanuki/state/: CMakeLists.txt  spin.cc.in  spin.h  spin_range.h  spin_range.hxx  spin_range_transformer.h  spin_range_transformer.hxx
src/main/resources/: CMakeLists.txt
src/main/resources/tanuki/eda/: basic_energy_components.avsc
src/main/resources/tanuki/math/linear/: number_array.avsc  number_array.avsc.in
src/main/resources/tanuki/scf_mi/: scf_mi_method.avsc
src/main/resources/tanuki/state/: spin.avsc
src/test/cpp/: test_instantiator.cc
src/test/cpp/tanuki/algorithm/: CMakeLists.txt  algorithm.cc
src/test/cpp/tanuki/avro_specific/: CMakeLists.txt  array.cc  map.cc  pair.cc  set.cc  size_t.cc
src/test/cpp/tanuki/eda/: CMakeLists.txt  hamiltonian_energies.cc
src/test/cpp/tanuki/interop/: CMakeLists.txt  foreign_container.cc  foreign_forward_iterator.cc  foreign_iterator.cc  foreign_multi_array.cc
src/test/cpp/tanuki/math/: CMakeLists.txt  comparison.cc
src/test/cpp/tanuki/math/linear/: equation_system.cc  iterated_gram_schmidt.cc  matrix_product.cc  number_array.cc  operator_representation.cc
src/test/cpp/tanuki/scf_mi/: CMakeLists.txt  scf_mi_method.cc
src/test/cpp/tanuki/state/: CMakeLists.txt  spin.cc  spin_range.cc  spin_range_transformer.cc
